--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 64px;
+}
+
 .winner {
     color: red;
 }
@@ -5,4 +13,19 @@
 .scores {
     display: flex;
     gap: 16px;
+    padding: 16px;
+}
+
+.hand-selection {
+    display: flex;
+    gap: 32px;
+}
+
+.hand-selection button {
+    width: 150px;
+    height: 75px;
+    background-color: #64b5fc;
+    border-radius: 8px;
+    font-size: 36px;
+    cursor: pointer;
 }
